# BabyLM

./: .env.example  .gitignore  .gitmodules  README.md  chat.py  main.py  pyproject.toml
BabyLM/: config.py  dataset.py  eval_report.py  logger.py  model.py  modeling_gptbert.py  muon.py  train.py
BabyLM/data_handler/: data_handler.py  tokenize_corpus.py
BabyLM/optim/: lamb.py
BabyLM/tokenizer/: bpe_tokenizer.py  visualize_trained_tokenizer.py
configs/: a40.json  dev.json  h100.json  small.json
scripts/: download_results.sh  eval.sh  fetch_tokenizer.sh  setup_eval_data.sh  submit_babylm.sh  submit_eval.sh  upload_to_cluster.sh  wandb_report_eval.py  watch_job.sh
